--- a/project/index.html
+++ b/project/index.html
@@ -7,6 +7,7 @@
     <script src = d3.js></script>
 </head>
 <body>
-<script src  = vertex_requirement_queries.js></script>
+<script src = force.js></script>
+<script src = vertex_refinement_queries.js></script>
 </body>
 </html>
