added hub_fingerprint_query method

--- a/project/index.html
+++ b/project/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>secret</title>
     <script src = net_data.js></script>
+    <script src = graph.js></script>
     <script src = d3.js></script>
 </head>
 <body>
 <script src = force.js></script>
 <script src = vertex_refinement_queries.js></script>
+<script src = hub_fingerprint_queries.js></script>
 </body>
 </html>
